volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-demo
spec:
  containers:
  - name: app
    image: nginx
    volumeMounts:
    - mountPath: /data
      name: demo-volume

  volumes:
  - name: demo-volume
    emptyDir: {}
