svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service

spec:
  selector:
    app: nginx

  type: ClusterIP

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
